--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html,body{
     min-width: 5vw;
 }
 .card h1{
-    display: none;
+    opacity: 0;
     position: absolute;
     bottom: 30px;
     left: 30px;
@@ -40,7 +40,8 @@ html,body{
     transition: width 2s ;
 }
 .card:focus h1{
-    display: initial;
+    opacity: 1;
+    transition: opacity 2s ease-in;
 }
 
 .card img{
